syntax = "proto3";
package passage3d.claim.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/envadiv/passage3d/x/claim/types";

// Params defines the claim module's parameters.
message Params {
  option (gogoproto.goproto_stringer) = false;
  bool airdrop_enabled = 1;

  // airdrop starting time
  google.protobuf.Timestamp airdrop_start_time = 2 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"airdrop_start_time\""
  ];

  google.protobuf.Duration duration_until_decay = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "duration_until_decay,omitempty",
    (gogoproto.moretags) = "yaml:\"duration_until_decay\""
  ];

  google.protobuf.Duration duration_of_decay = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "duration_of_decay,omitempty",
    (gogoproto.moretags) = "yaml:\"duration_of_decay\""
  ];

  // denom of claimable asset
  string claim_denom = 5;
}
